# Edu

./: .gitignore  PACE_AES_experiment_plan_zh.md  README.md  WISE_PACE_Project_Plan_Review_Driven.md  analyze_evolution_trend.py  analyze_rag_results.py  analyze_wise_pace_costs.py  config.yaml  eval_5fold.py  eval_generation.py  export_wise_pace_artifacts.py  instruction_record.md  main.py  plot_evolution_trend.py  plot_wise_pace_geometry.py  pyproject.toml  rag_substitution_results.csv  rag_substitution_results_original.csv  run_5fold_experiment.py  run_batch.py  test_mix_match.py  test_pace_fitness_quick.py  wise_aes.py
Essay_Set_Descriptions/: Essay Set #2--ReadMeFirst_domain1.docx  ~$say Set #8--ReadMeFirst.docx
baselines/: __init__.py  ape_lite.py  calibrator_only.py  common.py  opro_lite.py  oracle_ceiling.py  scorer_oracle_diagnostic.py
configs/: 1_1.yaml  1_2.yaml  1_3.yaml  2_1.yaml  2_2.yaml  2_3.yaml  3_1.yaml  3_2.yaml  3_3.yaml  anchor_budget_bapr_si.yaml  anchor_budget_bapr_v1.yaml  anchor_budget_bapr_v1_retrieval_parent.yaml  anchor_budget_coverage_first_sisa_p1.yaml  anchor_budget_coverage_first_sisa_p1_local_micro.yaml  anchor_budget_coverage_first_sisa_p1_local_smoke.yaml  anchor_budget_phase1_p1.yaml  anchor_budget_phase2_p1.yaml  anchor_budget_phase2_p2.yaml  anchor_budget_phase2_p7.yaml  anchor_budget_phase2_p8.yaml  anchor_budget_sisa_p1.yaml  batch_test_1.yaml  batch_test_2.yaml  default.yaml  default_legacy.yaml  exemplar_16.yaml  exemplar_16_legacy.yaml  exemplar_3.yaml  exemplar_3_legacy.yaml  exemplar_4_legacy.yaml  exemplar_6_legacy.yaml  (+115 more)
(+62 files in other folders)
